--- a/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/_RepositoryLayout.cshtml
@@ -18,7 +18,7 @@ else
                 <li><a href="@Url.Action("Tree", new { id = ViewBag.ID })" class="browser"><i class="fa fa-files-o"></i> @Resources.Repository_Layout_Browse</a></li>
                 <li><a href="@Url.Action("Commits", new { id = ViewBag.ID })" class="commits"><i class="fa fa-random"></i> @Resources.Repository_Layout_Commits</a></li>
                 <li><a href="@Url.Action("Tags", new { id = ViewBag.ID })" class="tags"><i class="fa fa-tag"></i> @Resources.Repository_Layout_Tags</a></li>
-                <li class="dropdown">
+                <li class="dropdown pure-form">
                     <details style="display:inline-block;">
                         <summary><i class="fa fa-chevron-down"></i>@Resources.Repository_Layout_Code</summary>
                         <div style="position:absolute;">
@@ -27,7 +27,7 @@ else
                                 <div>
                                     @*Git URL + Copy Button*@
                                     <label>@Resources.Repository_Detail_Location</label>
-                                    <input type="text" class="git-url-text" value="@Model.GitUrl" readonly/>
+                                    <input type="text" class="git-url-text removeVisualInput" value="@Model.GitUrl" readonly/>
                                     <button class="pure-button copy-to-clip-button layout" data-clipboard-target=".git-url-text"><i class="fa fa-clone"></i></button>
                                 </div>
                                 @if (User.Identity.IsAuthenticated)
@@ -37,7 +37,7 @@ else
                                         <label>
                                             @Resources.Repository_Detail_Location_Personal
                                         </label>
-                                        <input type="text" class="personal-url-text" value="@Model.PersonalGitUrl " readonly/>
+                                        <input type="text" class="personal-url-text removeVisualInput" value="@Model.PersonalGitUrl " readonly/>
                                         <button class="pure-button copy-to-clip-button layout" data-clipboard-target=".personal-url-text"><i class="fa fa-clone"></i></button>
                                     </div>
                                 }
