--- a/Bonobo.Git.Server/Content/dropdown.css
+++ b/Bonobo.Git.Server/Content/dropdown.css
@@ -1,10 +1,12 @@
 ﻿.dropdown {
     display: inline-block;
 }
-    .dropdown summary {
-        color: #777;
-        padding: 5px 20px;
-    }
+.dropdown summary {
+    color: #777;
+    padding: 5px 20px;
+    line-height: 1.5em;
+    border: 1px solid transparent;
+}
 #dropdownBox {
     position: relative;
     width: 500px;
@@ -15,29 +17,31 @@
     right: 45%;
     border-style: outset;
 }
-    #dropdownBox input {
-        color: black;
-        left: 28%;
-        position: absolute;
-        width: 320px;
-        border-style: none;
-        outline:none;
-    }
-   
-    #dropdownBox label{
-        position:relative;
-        left: 20px;
-    }
-    #dropdownBox .copy-to-clip-button {
-        font-size: 12px;
-        padding: 4px;
-        width: 15px;
-        position: absolute;
-        right: 25px;
-        background-color: white;
-    }
+#dropdownBox input {
+    left: 28%;
+    position: absolute;
+    width: 320px;
+}
+  
+#dropdownBox label{
+    position:relative;
+    left: 20px;
+}
+#dropdownBox .copy-to-clip-button {
+    font-size: 12px;
+    padding: 4px;
+    width: 15px;
+    position: absolute;
+    right: 25px;
+    background-color: white;
+}
 #dropbuttons{
     margin-top:10px;
+}
+
+.pure-menu .dropdown:hover {
+    background: #eee;
+    cursor: pointer;
 }
 .servInput{
     outline:none;
