--- a/Bonobo.Git.Server/Content/sidebar.css
+++ b/Bonobo.Git.Server/Content/sidebar.css
@@ -27,7 +27,7 @@
     /*background-color: #E6E6E6;*/ /*hsla(210,18%,87%,1)*/
     border-radius: 10px;
     margin-bottom: 25px;
-    border: 4px solid #2d3e50;
+    outline: 4px solid #2d3e50;
 }
 
 /* ---------- Grey lines between inner sidebar groups ---------- */
@@ -58,7 +58,7 @@
     vertical-align: middle;
     /*--sidebar-label-width: 13em;*/
     width: var(--sidebar-label-width);
-    margin: 0 1em 0 0
+    /*margin: 0 1em 0 0;*/
 }
 .sidebar-text.description {
     /*margin-top: 0.4em;*/
@@ -66,7 +66,7 @@
 .sidebar-text {
     margin-left: 1em
 }
-.pure-form input[readonly].sidebar-removeInput {
+.pure-form input[readonly].removeVisualInput {
     background: none;
     color: black;
     border: none;
